--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   </h2>
   
 </header>
+<section>
+<h1>COMPRAMOS CASAS</H1>
+<h2>EN CUALQUIER LUGAR DE LOS ESTADOS UNIDOS DE AMERICA EN CUALQUIER CONDICIÓN. A CUALQUIER PRECIO!</h2>
+<ul>
+  <li>Sin comisiones o cargos adicionales/escondidos</li>
+  <li>Venda su casa “en la condición en la que está”</li>
+  <li>Dejé los inquilinos con nosotros</li>
+  <li>Sin agentes inmobiliarios</li>
+  <li>Sin agentes inmobiliarios</li>
+</ul>
+</section>
 <section class="hero">
   <div class='hero-form'>
     <form >
@@ -31,18 +42,19 @@
 
       
       <input type="text" placeholder="Numero De Telephono" name="phone" id="phone" class="form-input">
-      <p>
-        Have you worked out with a trainer before?
-        <input type="radio" name="trainer-confirm" id="trainer-yes" />
-        <label for="trainer-yes">Yes</label>
-        <input type="radio" name="trainer-confirm" id="trainer-no" />
-        <label for="trainer-no">No</label>
-      </p>
+  
       <p>
         <label for="dropdown" >
           &#191; Cuando quieres vender?
         </label>
-        <input type="dropdown" name="age-confirm" id="checkbox" />
+       <select name ="time-frame" id"time-frame">
+       <option value="ASAP"> Lo mas pronto possible</option>
+        <option value="1month"> 1 Mes</option>
+        <option value="2months"> 2 Meses</option>
+        <option value="3months"> 3 Meses</option>
+        <option value="4months"> 4 Meses</option>
+        <option value="5months"> 5 Meses</option>
+        <option value="6monthsOrMore">6 Meses O Mas</option>
       </p>
       <button type="submit">
         OBTENER MI OFFERTA EN EFFECTIVO
