--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   <h2>
     Crompramos Casas En qualquier logar del <br> Metroplex de Dallas Y Fortworth
   </h2>
-  <h2>
+  
+   <a href="tel: 555-555-5555">
     LLAME 555-555-5555<br>
     PARA OBTENER OFFERTA
-  </h2>
+    </a>
+  
   
 </header>
-<section>
+<section id ="first">
 <h1>COMPRAMOS CASAS</H1>
-<h2>EN CUALQUIER LUGAR DE LOS ESTADOS UNIDOS DE AMERICA EN CUALQUIER CONDICIÓN. A CUALQUIER PRECIO!</h2>
+<h2>EN CUALQUIER AREA DEL DFW METROPLEX, EN CUALQUIER CONDICIÓN. A CUALQUIER PRECIO!</h2>
 <ul>
   <li>Sin comisiones o cargos adicionales/escondidos</li>
   <li>Venda su casa “en la condición en la que está”</li>
@@ -28,7 +30,7 @@
   <li>Sin agentes inmobiliarios</li>
 </ul>
 </section>
-<section class="hero">
+<section>
   <div class='hero-form'>
     <form >
     <h3>Obtener mi oferta en efectivo immediatamente</h3>
@@ -37,7 +39,7 @@
       <input type="text" placeholder="Primer Nombre" name="first-name" id="first-name" class="form-input">
 
       <input type="text" placeholder="Apellido" name="last-name" id="last-name" class="form-input">
-    
+    <br>
       <input type="text" placeholder="Correo Electronico" name="email" id="email" class="form-input">
 
       
@@ -66,101 +68,63 @@
 <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
   <h2 class="section-title primary-border">What We Do</h2>
-  <p>
-    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-  </p>
+ 
 </section>
+<h1> Porque Vendiendo A Nosotros Es Mejor </h1>
+<table>
+<tr>
+<th></th>
+<th>Vender con un agente</th>
+<th>Vendido a nuestra empresa</th>
+</tr>
+  <tr>
+    <th>Comisiones / Costos</th>
+    <td>En promedio, el 6% es pagado por usted, el vendedor<td>
+    <td>NINGUNO</td>
+  </tr>
+  <tr>
+    <th>Quién paga los costos de cierre?</th>
+    <td>En promedio, el 2% es pagado por usted, el vendedor<td>
+    <td>NINGUNO - Nosotros pagamos todos los costos del cierre</td>
+  </tr>
+  <tr>
+    <th>Contingencia de Inspección y Financiamiento</th>
+    <td>Si, hasta el 15% de las ventas no se concretan</td>
+    <td>NINGUNO</td>
+  </tr>
+  <tr>
+    <th>Evaluación Necesaria</th>
+    <td>Si, la venta muchas veces es sujeta a la valoración	<td>
+    <td>NINGUNO - Nosotros hacemos ofertas en efectivo</td>
+  </tr>
+  <tr>
+    <th>Promedio de días para vender</th>
+    <td>+/- 91 días</td>
+    <td>OFERTA INMEDIATA EN EFECTIVO</td>
+  </tr>
+  <tr>
+    <th>Veces que pueden mostrar</th>
+     <td>Todo depende</td>
+    <td>1 (Solamente a nosotros)</td>
+  </tr>
+  <tr>
+    <th>Fecha de cierre</th>
+    <td>30-60 +/- días después de aceptar la oferta</td>
+    <td>La fecha que USTED elija<td>
+  </tr>
+  <tr>
+    <th>Quien paga por las reparaciones?</th>
+    <td>Es negociado durante la inspección</td>
+    <td>NINGUNA - Nosotros pagamos por todas las 
+    </td>
+  </tr>
+</table>
 
-<!-- "what you do" section -->
-<section id="what-you-do" class="steps">
-
-  <h2 class="section-title secondary-border">What You Do</h2>
-  
- <div>
-    <img src="assets\css\images\step-1.svg" alt="" /> 
-    <h3>Step 1:<span> Fill Out the Form Above.</span></h3>
-    <p>You're already here, so why not?</p>
- </div>
-
-  <div>
-  <img src="assets/css/images/step-2.svg" alt="" />
-  <h3>Step 2: Consult with One of Our Trainers.</h3>
-  <p>Are you here to build muscle, lose weight, or just feel good?</p>
-</div>
-
-<div>
-  <img src="assets/css/images/step-3.svg" alt="" />
-  <h3>Step 3:<span> Get Running.</span></h3>
-  <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-</div>
-
-<div>
-  <img src="assets/css/images/step-4.svg" alt="" />
-  <h3>Step 4:<span> See Results.</span></h3>
-  <p>Bi-weekly checkins with your trainer will keep you focused</p>
-</div>
-</section>
 <section id="your-trainers">
-  <h2 class="section-title primary-border" >Meet the Trainers</h2>
-  <article class="trainer">    
-    <img src="assets/css/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-    <div class="trainer-bio text-left">
-      <h3>Arron Stephens</h3>
-      <h4>Speed / Strength</h4>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-      </p>
-    </div>
-  </article>
-  <!-- second trainer bio -->
-<article class="trainer">
-  <div class="trainer-bio text-right">
-    <h3>Joanna Gill</h3>
-    <h4>Endurance</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-  <img src="./assets/css/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-</article>
 
-<!-- third trainer bio -->
-<article class="trainer">
-  <img src="./assets/css/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-  <div class="trainer-bio text-left">
-    <h3>Harry "the Headband" Smith</h3>
-    <h4>Strength</h4>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-    </p>
-  </div>
-</article>
+ 
 </section>
 <!-- "reach out" section -->
-<section>
-  <h2>Reach Out</h2>
-  <div class="contact-info">
- 
-  </div>
-  <div>
-    <h3>Run Buddy</h3>
-    <p>
-      Any questions or concerns before signing up?
-      <br />
-      Let us know and we'll be happy to talk to you!
-    </p>
-    <address>
-      55 Main Street <br/>
-      Some Town, Ca <br/>
-      12345<br />
-      P: 555.RUN.BUDZ (555.786.2839)<br/>
-      E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-    </address>
-  </div>
-</section>
 <!-- footer -->
 <footer>
   <h5>&copy; 
