table completed minor css adjustments

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 <body>
  <header>
   <h2>
-    Crompramos Casas En qualquier logar del <br> Metroplex de Dallas Y Fortworth
+    Crompramos Casas En qualquier logar del </br> Metroplex de Dallas Y Fortworth
   </h2>
-  
+  <div>
    <a href="tel: 555-555-5555">
-    LLAME 555-555-5555<br>
+    LLAME 555-555-5555</br>
     PARA OBTENER OFFERTA
     </a>
+   <div> 
   
   
 </header>
 <section id ="first">
 <h1>COMPRAMOS CASAS</H1>
-<h2>EN CUALQUIER AREA DEL DFW METROPLEX, EN CUALQUIER CONDICIÓN. A CUALQUIER PRECIO!</h2>
+<h2>EN CUALQUIER AREA DEL DFW METROPLEX,<br> EN CUALQUIER CONDICIÓN. </br> A CUALQUIER PRECIO!</h2>
 <ul>
   <li>Sin comisiones o cargos adicionales/escondidos</li>
   <li>Venda su casa “en la condición en la que está”</li>
@@ -58,6 +59,8 @@
         <option value="5months"> 5 Meses</option>
         <option value="6monthsOrMore">6 Meses O Mas</option>
       </p>
+      <label>&#191;Que reparaciones necesita su casa?</label>
+      <textarea name="comments" cols="20" rows="4"></textarea>
       <button type="submit">
         OBTENER MI OFFERTA EN EFFECTIVO
       </button>
@@ -70,6 +73,7 @@
   <h2 class="section-title primary-border">What We Do</h2>
  
 </section>
+<section>
 <h1> Porque Vendiendo A Nosotros Es Mejor </h1>
 <table>
 <tr>
@@ -119,13 +123,7 @@
     </td>
   </tr>
 </table>
-
-<section id="your-trainers">
-
- 
 </section>
-<!-- "reach out" section -->
-<!-- footer -->
 <footer>
   <h5>&copy; 
     <a href="http://https://www.linkedin.com/in/xavier-garza-883267166/">Xavier Garza </a><h5/>
