fixed phone number button added flexbox to header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </h2>
   <div>
    <a href="tel: 555-555-5555">
-    LLAME 555-555-5555</br>
+    LLAME 555-555-5555
     PARA OBTENER OFFERTA
     </a>
    <div> 
