--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Compramos Casa's En DFW</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <script src="https://kit.fontawesome.com/406b6fffc9.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <body>
@@ -21,6 +22,7 @@
   
 </header>
 <section id ="first">
+<div>
 <h1>COMPRAMOS CASAS</H1>
 <h2>EN CUALQUIER AREA DEL DFW METROPLEX,<br> EN CUALQUIER CONDICIÓN. </br> A CUALQUIER PRECIO!</h2>
 <ul>
@@ -30,16 +32,26 @@
   <li>Sin agentes inmobiliarios</li>
   <li>Sin agentes inmobiliarios</li>
 </ul>
+</div>
+<div class="container">
+ <a href="tel: 555-555-5555" Class="tel-button">
+    <span><em>&#9742</em></span> LLAME 555-555-5555
+    PARA OBTENER OFERTA
+    </a>
+    <a href="#form" Class="get-Offer">
+    OBTENER MI OFFERTA EN EFFECTIVO
+    </a>
+ </div>   
 </section>
-<section>
+<section id="form">
   <div class='hero-form'>
     <form >
-    <h3>Obtener mi oferta en efectivo immediatamente</h3>
+    <h3>Obtener mi oferta en efectivo immediatamente <em>&#707 &#707</em></h3>
    
     
-      <input type="text" placeholder="Primer Nombre" name="first-name" id="first-name" class="form-input">
+      <input type="text" placeholder="primer-nombre" name="first-name" id="first-name" class="form-input">
 
-      <input type="text" placeholder="Apellido" name="last-name" id="last-name" class="form-input">
+      <input type="text" placeholder="apellido" name="last-name" id="last-name" class="form-input">
     <br>
       <input type="text" placeholder="Correo Electronico" name="email" id="email" class="form-input">
 
@@ -68,11 +80,7 @@
    </div>
 </section>
 
-<!-- "what we do" section -->
-<section id="what-we-do" class="intro">
-  <h2 class="section-title primary-border">What We Do</h2>
- 
-</section>
+
 <section>
 <h1> Porque Vendiendo A Nosotros Es Mejor </h1>
 <table>
@@ -123,6 +131,67 @@
     </td>
   </tr>
 </table>
+</section>
+<section>
+<ul>
+ <li><h2>NECESITAS VENDER TU CASA?</h2>
+ <p>
+Nosotros te damos una oferta justa y completamente en efectivo.
+Termina con la frustracion de ser dueño de una propiedad o terreno que ya no quieres.
+Dejanos comprar tu propiedad, terreno o hasta casa ahora, no importa su condicion.</P>
+ </li>
+ <li>
+ <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
+TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?</h2>
+<p>Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?</p>
+ </li>
+ <li>
+  <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
+TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?</h2>
+  <p>Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
+  </p>
+ </li>
+ <h2>NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
+NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
+GRAVAMENES FISCALES?
+</h2>
+  <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
+Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea, tienen una casa sola, estan atrasados en sus pagos, tienen un gravamen fiscal o un estan por ser embargados o simplemente quiere algo mas pequeño y no puede vender...
+hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.</p>
+<p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.</p>
+</ul>
+</section>
+<section>
+  <div class="container">
+    <div class="card">
+     <i class="fas fa-award"></i>
+     <h2>Experiencia</h2>
+     <p>Nosotros tenemos más de 20 años comprando propiedades</p>
+    </div> 
+    <div class="card">
+     <i class="fas fa-hands-helping"></i>
+     <h2>De Confianza</h2>
+     <p>Somos inversionistas y te tratamos con respeto y profesionalismo.</p>
+    </div> 
+    <div class="card">
+     <i class="far fa-clock"></i>
+     <h2>Rápidos</h2>
+     <p>Nosotros podemos hacer el cierre de su casa rápido, en algunas ocasiones hasta en 3 días.</p>
+    </div> 
+   <div class="card">
+     <i class="fas fa-money-bill-wave"></i>
+     <h2>Pago en efectivo</h2>
+     <p>Nosotros pagamos en efectivo. Sin bancos, agentes inmobiliarios y sin ninguna inspección es necesaria.</p>
+    </div> 
+  </div>
+  <h2>Nosotros compramos casas en donde sea en cualquier condicion a cualquier precio!</h2>
+    <p>Compramos todo tipo de propiedades, casas, townhomes, apartamentos, condominios, casas heredadas, casas en sucesión, casas que enfrentan ejecución hipotecaria, casas con inquilinos, propiedades en problemas, propiedades que necesitan mucho trabajo, propiedades con problemas legales, ¡y más!
+    </p>
+     <a href="#form" Class="get-Offer">
+    OBTENER MI OFFERTA EN EFFECTIVO
+    </a>
+
+
 </section>
 <footer>
   <h5>&copy; 
