--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 </div>
 <div class="container">
  <a href="tel: 555-555-5555" Class="tel-button">
-    <span><em>&#9742</em></span> LLAME 555-555-5555
+    <span><strong>&#9742<strong></span> LLAME 555-555-5555
     PARA OBTENER OFERTA
     </a>
     <a href="#form" Class="get-Offer">
-    OBTENER MI OFFERTA EN EFFECTIVO
+    OBTENER MI OFFERTA EN EFFECTIVO<strong>&#707 &#707</strong>
     </a>
  </div>   
 </section>
 <section id="form">
   <div class='hero-form'>
     <form >
-    <h3>Obtener mi oferta en efectivo immediatamente <em>&#707 &#707</em></h3>
+    <h3>Obtener mi oferta en efectivo immediatamente </h3>
    
     
       <input type="text" placeholder="primer-nombre" name="first-name" id="first-name" class="form-input">
@@ -71,7 +71,7 @@
         <option value="5months"> 5 Meses</option>
         <option value="6monthsOrMore">6 Meses O Mas</option>
       </p>
-      <label>&#191;Que reparaciones necesita su casa?</label>
+      <label for="comments">&#191;Que reparaciones necesita su casa?</label>
       <textarea name="comments" cols="20" rows="4"></textarea>
       <button type="submit">
         OBTENER MI OFFERTA EN EFFECTIVO
@@ -90,42 +90,42 @@
 <th>Vendido a nuestra empresa</th>
 </tr>
   <tr>
-    <th>Comisiones / Costos</th>
-    <td>En promedio, el 6% es pagado por usted, el vendedor<td>
+    <td>Comisiones / Costos</td>
+    <td>En promedio, el 6% es pagado por usted, el vendedor</td>
     <td>NINGUNO</td>
   </tr>
   <tr>
-    <th>Quién paga los costos de cierre?</th>
-    <td>En promedio, el 2% es pagado por usted, el vendedor<td>
+    <td>Quién paga los costos de cierre?</td>
+    <td>En promedio, el 2% es pagado por usted, el vendedor</td>
     <td>NINGUNO - Nosotros pagamos todos los costos del cierre</td>
   </tr>
   <tr>
-    <th>Contingencia de Inspección y Financiamiento</th>
+    <td>Contingencia de Inspección y Financiamiento</td>
     <td>Si, hasta el 15% de las ventas no se concretan</td>
     <td>NINGUNO</td>
   </tr>
   <tr>
-    <th>Evaluación Necesaria</th>
-    <td>Si, la venta muchas veces es sujeta a la valoración	<td>
+    <td>Evaluación Necesaria</td>
+    <td>Si, la venta muchas veces es sujeta a la valoración	</td>
     <td>NINGUNO - Nosotros hacemos ofertas en efectivo</td>
   </tr>
   <tr>
-    <th>Promedio de días para vender</th>
+    <td>Promedio de días para vender</td>
     <td>+/- 91 días</td>
     <td>OFERTA INMEDIATA EN EFECTIVO</td>
   </tr>
   <tr>
-    <th>Veces que pueden mostrar</th>
+    <td>Veces que pueden mostrar</td>
      <td>Todo depende</td>
     <td>1 (Solamente a nosotros)</td>
   </tr>
   <tr>
-    <th>Fecha de cierre</th>
+    <td>Fecha de cierre</d>
     <td>30-60 +/- días después de aceptar la oferta</td>
     <td>La fecha que USTED elija<td>
   </tr>
   <tr>
-    <th>Quien paga por las reparaciones?</th>
+    <td>Quien paga por las reparaciones?</td>
     <td>Es negociado durante la inspección</td>
     <td>NINGUNA - Nosotros pagamos por todas las 
     </td>
