--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     LLAME 555-555-5555
     PARA OBTENER OFFERTA
     </a>
-   <div> 
+</div>
   
   
 </header>
@@ -39,7 +39,7 @@
     PARA OBTENER OFERTA
     </a>
     <a href="#form" Class="get-Offer">
-    OBTENER MI OFFERTA EN EFFECTIVO<strong>&#707 &#707</strong>
+    OBTENER MI OFFERTA EN EFFECTIVO<span><strong>&#707 &#707</strong><span>
     </a>
  </div>   
 </section>
@@ -81,7 +81,7 @@
 </section>
 
 
-<section>
+<section id=why-sell-us>
 <h1> Porque Vendiendo A Nosotros Es Mejor </h1>
 <table>
 <tr>
@@ -94,7 +94,7 @@
     <td>En promedio, el 6% es pagado por usted, el vendedor</td>
     <td>NINGUNO</td>
   </tr>
-  <tr>
+  <tr class="table-even">
     <td>Quién paga los costos de cierre?</td>
     <td>En promedio, el 2% es pagado por usted, el vendedor</td>
     <td>NINGUNO - Nosotros pagamos todos los costos del cierre</td>
@@ -104,7 +104,7 @@
     <td>Si, hasta el 15% de las ventas no se concretan</td>
     <td>NINGUNO</td>
   </tr>
-  <tr>
+  <tr class="table-even">
     <td>Evaluación Necesaria</td>
     <td>Si, la venta muchas veces es sujeta a la valoración	</td>
     <td>NINGUNO - Nosotros hacemos ofertas en efectivo</td>
@@ -114,7 +114,7 @@
     <td>+/- 91 días</td>
     <td>OFERTA INMEDIATA EN EFECTIVO</td>
   </tr>
-  <tr>
+  <tr class="table-even">
     <td>Veces que pueden mostrar</td>
      <td>Todo depende</td>
     <td>1 (Solamente a nosotros)</td>
@@ -124,7 +124,7 @@
     <td>30-60 +/- días después de aceptar la oferta</td>
     <td>La fecha que USTED elija<td>
   </tr>
-  <tr>
+  <tr class="table-even">
     <td>Quien paga por las reparaciones?</td>
     <td>Es negociado durante la inspección</td>
     <td>NINGUNA - Nosotros pagamos por todas las 
