added buttons before cards

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </section>
 
 
-<section id=why-sell-us>
+<section id="why-sell-us">
 <h1> Porque Vendiendo A Nosotros Es Mejor </h1>
 <table>
 <tr>
@@ -160,6 +160,15 @@ Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea,
 hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.</p>
 <p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.</p>
 </ul>
+<div class="container">
+ <a href="tel: 555-555-5555" Class="tel-button">
+    <span><strong>&#9742<strong></span> LLAME 555-555-5555
+    PARA OBTENER OFERTA
+    </a>
+    <a href="#form" Class="get-Offer">
+    OBTENER MI OFFERTA EN EFFECTIVO<span><strong>&#707 &#707</strong><span>
+    </a>
+ </div> 
 </section>
 <section>
   <div class="container">
@@ -190,7 +199,7 @@ hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas 
      <a href="#form" Class="get-Offer">
     OBTENER MI OFFERTA EN EFFECTIVO
     </a>
-
+<section>
 
 </section>
 <footer>
