--- a/index.html
+++ b/index.html
@@ -134,23 +134,24 @@
 </section>
 <section>
 <ul>
- <li><h2>NECESITAS VENDER TU CASA?</h2>
+ <li><i class="fas fa-question"></i>
+ <h2>NECESITAS VENDER TU CASA?</h2>
  <p>
 Nosotros te damos una oferta justa y completamente en efectivo.
 Termina con la frustracion de ser dueño de una propiedad o terreno que ya no quieres.
 Dejanos comprar tu propiedad, terreno o hasta casa ahora, no importa su condicion.</P>
  </li>
- <li>
+ <li><i class="fas fa-question"></i>
  <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
 TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?</h2>
 <p>Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?</p>
  </li>
- <li>
+ <li><i class="fas fa-question"></i>
   <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
 TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?</h2>
   <p>Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
   </p>
- </li>
+ </li><i class="fas fa-question"></i>
  <h2>NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
 NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
 GRAVAMENES FISCALES?
@@ -170,7 +171,7 @@ hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas 
     </a>
  </div> 
 </section>
-<section>
+<section id="fourth">
   <div class="container">
     <div class="card">
      <i class="fas fa-award"></i>
@@ -199,8 +200,50 @@ hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas 
      <a href="#form" Class="get-Offer">
     OBTENER MI OFFERTA EN EFFECTIVO
     </a>
-<section>
+</section id="nuestro processo">
 
+<h1>Nuestro Processo</h1>
+<p>Existe Cuatro pasos muy rápidos y sencillos para obtener efectivo por su casa. Nosotros compramos propiedades unifamiliares, multifamiliares, casas townhomes y apartamentos tal como están. Deje que nosotros nos hagamos cargo de usted y déjese poner dinero en efectivo en su mano. ¡Llámenos hoy!</p>
+<div class="container">
+ <div class="card">
+  <i class="fas fa-phone-volume"></i>
+  <h2>Habla</h2>
+  <p>Llame al 1-866-697-0409 o llene el formulario y nosotros lo llamaremos. Nuestro equipo le va hacer unas preguntas para saber más sobre el valor de su casa y su situación.
+  </p>
+</div>
+<div class="card">
+<i class="fas fa-hand-holding-usd"></i>
+<h2>Ofertas</h2>
+<p>Nosotros evaluaremos su casa usando la herramienta más avanzadas para comprar  y hacerle una oferta por teléfono. No existen ningún  costo escondido o deducciones al cerrar la venta
+</p>
+</div>
+<div class="card">
+<i class="fas fa-file-signature"></i>
+<h2>contrato</h2>
+<p>Después de acordar en la mejor oferta posible, usted recibirá su contrato vía correo electrónico, fax o por correo de 1 noche y tendrá días para revisar el contrato y aceptarlo.
+</p>
+</div>
+<div class="card">
+<i class="far fa-sun"></i>
+<h2>Dia de Cierre</h2>
+<p>En cuanto el contrato sea firmando y de regreso , usted va fijar una fecha para ir a la compañía de títulos, de ahí usted recibirá sus fondos por cheque bancario, transferencia de dinero, o fondos certificados.
+</p>
+</div>
+</div>
+<a href="#form">OBTENER MIS TRES OFERTAS EN EFFECTIVO</a>
+</section>
+<section>
+<h1>Listo para seguir hacia delante?</h1>
+<p>¿O simplemente tiene curiosidad por saber cuál es el valor en efectivo de sus propiedades?</p>
+<div class="container">
+ <a href="tel: 555-555-5555" Class="tel-button">
+    <span><strong>&#9742<strong></span> LLAME 555-555-5555
+    PARA OBTENER OFERTA
+    </a>
+    <a href="#form" Class="get-Offer">
+    OBTENER MI OFFERTA EN EFFECTIVO<span><strong>&#707 &#707</strong><span>
+    </a>
+ </div> 
 </section>
 <footer>
   <h5>&copy; 
