changes to card class

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <li>Sin agentes inmobiliarios</li>
 </ul>
 </div>
-<div class="container">
- <a href="tel: 555-555-5555" Class="tel-button">
+<div class="container" >
+ <a href="tel: 555-555-5555" Class="tel-button btngradient">
     <span><strong>&#9742<strong></span> LLAME 555-555-5555
     PARA OBTENER OFERTA
     </a>
@@ -173,11 +173,7 @@ hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas 
 </section>
 <section id="fourth">
   <div class="container">
-    <div class="card">
-     <i class="fas fa-award"></i>
-     <h2>Experiencia</h2>
-     <p>Nosotros tenemos más de 20 años comprando propiedades</p>
-    </div> 
+
     <div class="card">
      <i class="fas fa-hands-helping"></i>
      <h2>De Confianza</h2>
