--- a/index.html
+++ b/index.html
@@ -133,35 +133,58 @@
   </tr>
 </table>
 </section>
-<section>
-<ul>
- <li><i class="fas fa-question"></i>
- <h2>NECESITAS VENDER TU CASA?</h2>
- <p>
-Nosotros te damos una oferta justa y completamente en efectivo.
-Termina con la frustracion de ser dueño de una propiedad o terreno que ya no quieres.
-Dejanos comprar tu propiedad, terreno o hasta casa ahora, no importa su condicion.</P>
- </li>
- <li><i class="fas fa-question"></i>
- <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
-TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?</h2>
-<p>Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?</p>
- </li>
- <li><i class="fas fa-question"></i>
-  <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
-TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?</h2>
-  <p>Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
-  </p>
- </li><i class="fas fa-question"></i>
- <h2>NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
-NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
-GRAVAMENES FISCALES?
-</h2>
-  <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
-Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea, tienen una casa sola, estan atrasados en sus pagos, tienen un gravamen fiscal o un estan por ser embargados o simplemente quiere algo mas pequeño y no puede vender...
-hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.</p>
-<p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.</p>
-</ul>
+<section id="need-to-sell">
+ 
+  <div class="container">
+   <div class="questionLi">?</div>
+    <div class="list-item">
+      <h2>NECESITAS VENDER TU CASA?</h2>
+      <p>
+      Nosotros te damos una oferta justa y completamente en efectivo.
+      Termina con la frustracion de ser dueño de una propiedad o terreno que ya no quieres.
+      Dejanos comprar tu propiedad, terreno o hasta casa ahora, no importa su condicion.
+     </p>
+    </div>
+  </div>
+  <div class="container">
+   <div class ="questionLi">?</div>
+    <div class="list-item">
+     <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
+         TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?
+      </h2>
+      <p>
+         Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
+      <p5>
+     </div>
+    </div>
+   <div class="container">
+    <div class ="questionLi">?</div>
+    <div class="list-item">
+      <h2>ESTAS TRATANDO DE SACARLE LO MAS QUE SE PUEDE A TU CASA SIN HACERLE TODAS LAS REPARACIONES PARA VENDER?
+      TIENES DUDAS DE COMO EVITAR UN JUICIO HIPOTECARIO?
+      </h2>
+      <p>
+    Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
+      </p>
+    </div>
+  </div>
+    <div class ="questionLi">?</div>
+    <div class="list-item">
+      <h1>
+      NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
+      NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
+      GRAVAMENES FISCALES?
+     </h1>
+     <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
+          Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea, tienen una casa sola, estan atrasados en sus pagos, tienen un gravamen fiscal o un estan por ser embargados o simplemente quiere algo mas pequeño y no puede vender...
+          hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.
+      </p>
+      <p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.
+      </p>
+     </div>
+    </div>
+   </div> 
+
 <div class="container">
  <a href="tel: 555-555-5555" Class="tel-button">
     <span><strong>&#9742<strong></span> LLAME 555-555-5555
