--- a/index.html
+++ b/index.html
@@ -167,33 +167,31 @@
     Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
       </p>
     </div>
-  </div>
+  </div class="container">
     <div class ="questionLi">?</div>
-    <div class="list-item">
+      <div class="list-item">
       <h1>
       NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
       NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
       GRAVAMENES FISCALES?
-     </h1>
-     <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
+      </h1>
+       <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
           Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea, tienen una casa sola, estan atrasados en sus pagos, tienen un gravamen fiscal o un estan por ser embargados o simplemente quiere algo mas pequeño y no puede vender...
           hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.
       </p>
-      <p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.
-      </p>
+       <p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.
+       </p>
+      </div>
      </div>
-    </div>
-   </div> 
-
-<div class="container">
- <a href="tel: 555-555-5555" Class="tel-button">
+  <div class="container">
+    <a href="tel: 555-555-5555" Class="tel-button">
     <span><strong>&#9742<strong></span> LLAME 555-555-5555
     PARA OBTENER OFERTA
     </a>
     <a href="#form" Class="get-Offer">
     OBTENER MI OFFERTA EN EFFECTIVO<span><strong>&#707 &#707</strong><span>
     </a>
- </div> 
+  </div> 
 </section>
 <section id="fourth">
   <div class="container">
