--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
 <section id="why-sell-us">
-<h1> Porque Vendiendo A Nosotros Es Mejor </h1>
+<h1 class="center"> Porque Vendiendo A Nosotros Es Mejor </h1>
 <table>
 <tr>
 <th></th>
@@ -170,11 +170,11 @@
   </div class="container">
     <div class ="questionLi">?</div>
       <div class="list-item">
-      <h1>
+      <h2>
       NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
       NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
       GRAVAMENES FISCALES?
-      </h1>
+      </h2>
        <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
           Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea, tienen una casa sola, estan atrasados en sus pagos, tienen un gravamen fiscal o un estan por ser embargados o simplemente quiere algo mas pequeño y no puede vender...
           hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.
@@ -212,21 +212,21 @@
      <p>Nosotros pagamos en efectivo. Sin bancos, agentes inmobiliarios y sin ninguna inspección es necesaria.</p>
     </div> 
   </div>
-  <h2>Nosotros compramos casas en donde sea en cualquier condicion a cualquier precio!</h2>
-    <p>Compramos todo tipo de propiedades, casas, townhomes, apartamentos, condominios, casas heredadas, casas en sucesión, casas que enfrentan ejecución hipotecaria, casas con inquilinos, propiedades en problemas, propiedades que necesitan mucho trabajo, propiedades con problemas legales, ¡y más!
+  <h2 class="center">Nosotros compramos casas en donde sea en cualquier condicion a cualquier precio!</h2>
+    <p class="center">Compramos todo tipo de propiedades, casas, townhomes, apartamentos, condominios, casas heredadas, casas en sucesión, casas que enfrentan ejecución hipotecaria, casas con inquilinos, propiedades en problemas, propiedades que necesitan mucho trabajo, propiedades con problemas legales, ¡y más!
     </p>
-     <a href="#form" Class="get-Offer">
+     <a href="#form" Class="get-Offer center">
     OBTENER MI OFFERTA EN EFFECTIVO
     </a>
 </section id="nuestro processo">
 
-<h1>Nuestro Processo</h1>
-<p>Existe Cuatro pasos muy rápidos y sencillos para obtener efectivo por su casa. Nosotros compramos propiedades unifamiliares, multifamiliares, casas townhomes y apartamentos tal como están. Deje que nosotros nos hagamos cargo de usted y déjese poner dinero en efectivo en su mano. ¡Llámenos hoy!</p>
+<h1 class="center">Nuestro Processo</h1>
+<p class="center">Existe Cuatro pasos muy rápidos y sencillos para obtener efectivo por su casa. Nosotros compramos propiedades unifamiliares, multifamiliares, casas townhomes y apartamentos tal como están. Deje que nosotros nos hagamos cargo de usted y déjese poner dinero en efectivo en su mano. ¡Llámenos hoy!</p>
 <div class="container">
  <div class="card">
   <i class="fas fa-phone-volume"></i>
   <h2>Habla</h2>
-  <p>Llame al 1-866-697-0409 o llene el formulario y nosotros lo llamaremos. Nuestro equipo le va hacer unas preguntas para saber más sobre el valor de su casa y su situación.
+  <p>Llame al 1-555-555-5555 o llene el formulario y nosotros lo llamaremos. Nuestro equipo le va hacer unas preguntas para saber más sobre el valor de su casa y su situación.
   </p>
 </div>
 <div class="card">
@@ -251,8 +251,8 @@
 <a href="#form">OBTENER MIS TRES OFERTAS EN EFFECTIVO</a>
 </section>
 <section>
-<h1>Listo para seguir hacia delante?</h1>
-<p>¿O simplemente tiene curiosidad por saber cuál es el valor en efectivo de sus propiedades?</p>
+<h1 class="center">Listo para seguir hacia delante?</h1>
+<p class="center">¿O simplemente tiene curiosidad por saber cuál es el valor en efectivo de sus propiedades?</p>
 <div class="container">
  <a href="tel: 555-555-5555" Class="tel-button">
     <span><strong>&#9742<strong></span> LLAME 555-555-5555
@@ -264,8 +264,8 @@
  </div> 
 </section>
 <footer>
-  <h5>&copy; 
-    <a href="http://https://www.linkedin.com/in/xavier-garza-883267166/">Xavier Garza </a><h5/>
+
+    <a href="https://www.linkedin.com/in/xavier-garza-883267166/">Designed by Xavier Garza </a>
      
    
  </footer>
