--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
     Estas pasando por un divorcio o ya no quieres una casa "en la que vivias" y solamente quieres seguir hacia adelante con tu vida?
       </p>
     </div>
-  </div class="container">
+    </div>
+  <div class="container">
     <div class ="questionLi">?</div>
-      <div class="list-item">
+     <div class="list-item">
       <h2>
       NECESITAS MOVERTE DE CASA O REUBICARTE RAPIDO?
       NO SABE YA QUE HACER CON LOS PAGOS DE SU CASA?
@@ -183,9 +184,9 @@
        <p>Cualquiera que sea la situacion ya sea la casa este o no habitable
           Nosotros ayudamos a los dueños que tiene una propiedad heredada o que no desea, tienen una casa sola, estan atrasados en sus pagos, tienen un gravamen fiscal o un estan por ser embargados o simplemente quiere algo mas pequeño y no puede vender...
           hasta si su casa necesita reparaciones que usted no puede pagar y si hasta esas casas dañadas por el fuego o con malos inquilinos.
-      </p>
-       <p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.
-       </p>
+        </p></br>
+        <p>En general, usted tiene una propiedad y necesita venderla... nosotros le haremos una oferta justa y en efectivo y podemos hacer el cierre cuando usted este listo para vender, lo mas rapido que usted lo necesite.
+        </p>
       </div>
      </div>
   <div class="container">
