--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Compramos Casa's En DFW</title>
+  <meta name="title" content="compra mi casa DFW">
+<meta name="description" content="compramos casa's en effectivo en todo el metroplex de Dallas Y Fort Worth,">
+<meta name="keywords" content="casa, dinero, effectivo, Dallas, Fort worth, Arlington ,Frisco, Rockway, Garland, vender, agente de bienes raíces, dinero rapido, tejas, texas">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="Spanish">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <script src="https://kit.fontawesome.com/406b6fffc9.js" crossorigin="anonymous"></script>
 </head>
