form portrait layout

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     <h3>Obtener mi oferta en efectivo immediatamente </h3>
    
     
-      <input type="text" placeholder="primer-nombre" name="first-name" id="first-name" class="form-input" required="required">
+      <input type="text" placeholder="primer-nombre" name="first-name" id="first-name" class="form-input rounded-input" required="required">
 
-      <input type="text" placeholder="apellido" name="last-name" id="last-name" class="form-input" required="required">
+      <input type="text" placeholder="apellido" name="last-name" id="last-name" class="form-input rounded-input" required="required">
     <br>
-      <input type="text" placeholder="Correo Electronico" name="email" id="email" class="form-input" required="required">
+      <input type="text" placeholder="Correo Electronico" name="email" id="email" class="form-input rounded-input" required="required">
 
       
-      <input type="text" placeholder="Numero De Telephono" name="phone" id="phone" class="form-input" required ="required">
+      <input type="text" placeholder="Numero De Telephono" name="phone" id="phone" class="form-input rounded-input" required ="required">
   
       <p>
         <label for="dropdown" >
@@ -78,9 +78,6 @@
         <option value="6monthsOrMore">6 Meses O Mas</option>
       </p><br>
       <P>
-      <label for="comments">
-      &#191;Que reparaciones necesita su casa?
-      </label>
       <br>
       <textarea id="comments" cols="50" rows="5" placeholder="Que reparaciones necesita tu casa"></textarea>
       </p>
