flex box column

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
  </div>   
 </section>
 <section id="form">
-  <div class='hero-form'>
-    <form action="https://formspree.io/f/xeqvnvqk" method="POST">
+
+    <form action="https://formspree.io/f/xeqvnvqk" method="POST" class='hero-form' >
     <h3>Obtener mi oferta en efectivo immediatamente </h3>
    
     
@@ -83,10 +83,10 @@
       </p>
       <br>
       <button type="submit">
-        OBTENER MI OFFERTA EN EFFECTIVO
+        SUBMITIR INFORMACION PARA OBTENER MI OFFERTA EN EFFECTIVO
       </button>
     </form>
-   </div>
+
 </section>
 
 
