--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </p>
       <br>
       <button type="submit">
-        SUBMITIR INFORMACION PARA OBTENER MI OFFERTA EN EFFECTIVO
+        ENVIAR INFORMACION PARA OBTENER MI OFFERTA EN EFFECTIVO
       </button>
     </form>
 
