--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>Compramos Casa's En DFW</title>
   <meta name="title" content="compra mi casa DFW">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 <meta name="description" content="compramos casa's en effectivo en todo el metroplex de Dallas Y Fort Worth,">
 <meta name="keywords" content="casa, dinero, effectivo, Dallas, Fort worth, Arlington ,Frisco, Rockway, Garland, vender, agente de bienes raíces, dinero rapido, tejas, texas">
 <meta name="robots" content="index, follow">
@@ -13,19 +20,17 @@
   <script src="https://kit.fontawesome.com/406b6fffc9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<body>
  <header>
-  <h2>
-    Crompramos Casas En qualquier lugar del </br> Metroplex de Dallas Y Fortworth
-  </h2>
+ <img src="./assets/images/compramicasalogo.png"></img>
+  <h1>
+    Crompramos Casas En qualquier lugar del <br> Metroplex de Dallas Y Fortworth
+  </h1>
   <div>
    <a href="tel: 214-287-3750">
     LLAME 214-287-3750
     PARA OBTENER OFERTA
      </a>
 </div>
-  
-  
 </header>
 <section id ="first">
 <div>
