fixed inputs in form

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <h3>Obtener mi oferta en efectivo immediatamente </h3>
    
     <div id="name">
-      <input type="text" placeholder="primer-nombre" name="first-name" id="first-name" class="form-input rounded-input" required="required">
+      <input type="text" placeholder="Primer Nombre" name="first-name" id="first-name" class="form-input rounded-input" required="required">
 
-      <input type="text" placeholder="apellido" name="last-name" id="last-name" class="form-input rounded-input" required="required">
+      <input type="text" placeholder="Apellido" name="last-name" id="last-name" class="form-input rounded-input" required="required">
     </div>
     <div id="contact-information">
       <input type="text" placeholder="Correo Electronico" name="email" id="email" class="form-input rounded-input" required="required">
